--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,8 @@
 
 @import "{{ site.theme }}";
 
+background-image: url("https://github.com/ForgtAI/ForgtAI.github.io/blob/main/ForgtAI_logo.png");
+background-size: 100% auto;
 
 body {
     font: #2A394B;
