Update style.scss trying color for h1 in body

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,6 +9,9 @@ background-size: 100% auto;
 body {
     font: #2A394B;
     color: #000000;
+     h1 {
+        color: #2A394B;
+    }
 }
 
 header {   
