Update style.scss color

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,11 +6,7 @@
 
 
 body {
-    font: #000000;
-    color: #000000;
-     h1 {
-        color: #355C85;
-    }
+    color: #355C85; /* Change to any color you want */
 }
 
 header {   
