--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,13 +6,17 @@
 
 
 body {
-    color: #355C85; /* Change to any color you want */
+    color: #355C85;  
+}
+
+h1, h2, h3 {
+    color: #355C85; 
 }
 
 header {   
     background: #E0DED4; 
     h1 {
-        color: #2A394B;
+        color: #355C85;
     }
 }
 
