Update style.scss trying main content

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,18 +5,17 @@
 
 
 
-body {
-    color: #355C85;  
+.main-content {
+    color: #0E2037; 
 }
-
-h1, h2, h3 {
+.main-content h1, h2,h3{
     color: #355C85; 
 }
 
 header {   
     background: #E0DED4; 
     h1 {
-        color: #000000;
+        color: #0E2037;
     }
 }
 
