--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,7 +21,7 @@
     color: #355C85; 
 }
 header {   
-    background-color:: #E0DED4; 
+    background-color: #E0DED4; 
     h1 {
         color: #0E2037;
     }
