--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,7 +22,7 @@
 }
 
 header {   
-    background-color: #E0DED4 !important; 
+    background-color: #E5E5DF !important; 
     h1 {
         color: #0E2037;
     }
@@ -31,9 +31,3 @@ header {
     }
 }
 
-.banner {
-    background-color: #E0DED4; 
-}
-.banner::before {
-    background: none;
-}
