--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,6 +21,11 @@
     color: #355C85; 
 }
 
+.banner {
+    background-size: cover;
+    background-position: center center;
+}
+
 header {   
     background-color: #E5E5DF !important; 
     h1 {
