--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -26,7 +26,7 @@
     background-position: center center;
 }
 
-header {   
+header, .site-header  {   
     background-color: #E5E5DF !important; 
     h1 {
         color: #0E2037;
