--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -26,7 +26,7 @@
     background-position: center center;
 }
 
-header, .site-header  {   
+header  {   
     background-color: #E5E5DF !important; 
     h1 {
         color: #0E2037;
@@ -34,3 +34,6 @@ header, .site-header  {
  
 }
 
+.site-header  {   
+    background-color: #E5E5DF !important; 
+}
