--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -28,9 +28,13 @@
 
 
 
-.site-header  {   
+header  {   
     background-color: #E5E5DF !important; 
      h1 {
         color: #0E2037;
     }
+}
+
+.navbar {
+    background-color: #E5E5DF !important; /* Replace with your desired color */
 }
