--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -27,8 +27,9 @@
 }
 
 
-.header  {   
-    background-color: #E5E5DF !important; 
-   
+header  {   
+    background: #E5E5DF !important;  /* Replace with your desired color */
+    background-image: none !important;  /* Ensure no background image is applied */
+    background-color: #E5E5DF !important;  /* Ensure background color is applie
 }
 
