Update style.scss final

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -28,8 +28,11 @@
 
 
 header  {   
-    background: #E5E5DF !important;  /* Replace with your desired color */
-    background-image: none !important;  /* Ensure no background image is applied */
-    background-color: #E5E5DF !important;  /* Ensure background color is applie
+    background: #E5E5DF !important;  
+    background-image: none !important;  
+    background-color: #E5E5DF !important;  
+    h1{
+    color: #355C85; 
+    }
 }
 
