Update style.scss changing colors of titles

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,6 +32,9 @@ header  {
     background-image: none !important;  
     background-color: #E5E5DF !important;  
     h1{
+    color: #0F2038; 
+    }
+    h2{
     color: #355C85; 
     }
 }
