--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -31,6 +31,7 @@ header {
     height: 400px;  /* Adjust height as needed */
     background-color: transparent !important; /* Ensure the background color doesn't show */
 }
-.site-title, .site-description {
+
+title {
     display: none !important;
 }
