Update style.scss color transparent

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,6 +30,12 @@ header {
     background-position: center center;
     height: 400px;  /* Adjust height as needed */
     background-color: transparent !important; /* Ensure the background color doesn't show */
+    h1{
+        color: transparent !important;
+    }
+     h2{
+        color: transparent !important;
+    }
 }
 
 title {
